Python-defined nodes implementing a draw_label function causes a segmentation fault when drawn. #69808

Closed
opened 2019-09-12 17:20:33 +02:00 by Omar Emara · 17 comments
Member

System Information
Operating system: Arch Linux
Graphics card: Radeon RX 590

Blender Version
Broken: f80018b5f7
Worked: Builds from last week.

Short description of error

Python-defined nodes that implements the draw_label function causes a segmentation fault when drawn. This affects node-based addons such as Animation Nodes, see issue 1183 .

Exact steps for others to reproduce the error
Open a shader editor and add a material Material, then execute the following script:

import bpy

class Test(bpy.types.Node):
    bl_name = 'test' 
    bl_label = 'test'
    
    def draw_label(self):
        return "test"
    
bpy.utils.register_class(Test)

bpy.data.materials['Material'].node_tree.nodes.new('Test')
**System Information** Operating system: Arch Linux Graphics card: Radeon RX 590 **Blender Version** Broken: f80018b5f749 Worked: Builds from last week. **Short description of error** Python-defined nodes that implements the `draw_label` function causes a segmentation fault when drawn. This affects node-based addons such as Animation Nodes, see issue [1183 ](https://github.com/JacquesLucke/animation_nodes/issues/1183). **Exact steps for others to reproduce the error** Open a shader editor and add a material `Material`, then execute the following script: ``` import bpy class Test(bpy.types.Node): bl_name = 'test' bl_label = 'test' def draw_label(self): return "test" bpy.utils.register_class(Test) bpy.data.materials['Material'].node_tree.nodes.new('Test') ```
Author
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev

#69980 was marked as duplicate of this issue

#69980 was marked as duplicate of this issue
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I can reproduce it.

BLI_strnlen(const char * s, const size_t maxlen) (/home/jacques/blender-git/blender/source/blender/blenlib/intern/string.c:780)
BLI_strncpy(char * restrict dst, const char * restrict src, const size_t maxncpy) (/home/jacques/blender-git/blender/source/blender/blenlib/intern/string.c:108)
rna_Node_draw_label(bNodeTree * ntree, bNode * node, char * label, int maxlen) (/home/jacques/blender-git/blender/source/blender/makesrna/intern/rna_nodetree.c:1486)
nodeLabel(bNodeTree * ntree, bNode * node, char * label, int maxlen) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/node.c:3484)
node_draw_basis(const bContext * C, ARegion * ar, SpaceNode * snode, bNodeTree * ntree, bNode * node, bNodeInstanceKey key) (/home/jacques/blender-git/blender/source/blender/editors/space_node/node_draw.c:1221)
node_draw_default(const bContext * C, ARegion * ar, SpaceNode * snode, bNodeTree * ntree, bNode * node, bNodeInstanceKey key) (/home/jacques/blender-git/blender/source/blender/editors/space_node/node_draw.c:1512)
node_draw(const bContext * C, ARegion * ar, SpaceNode * snode, bNodeTree * ntree, bNode * node, bNodeInstanceKey key) (/home/jacques/blender-git/blender/source/blender/editors/space_node/node_draw.c:1544)
node_draw_nodetree(const bContext * C, ARegion * ar, SpaceNode * snode, bNodeTree * ntree, bNodeInstanceKey parent_key) (/home/jacques/blender-git/blender/source/blender/editors/space_node/node_draw.c:1609)
draw_nodetree(const bContext * C, ARegion * ar, bNodeTree * ntree, bNodeInstanceKey parent_key) (/home/jacques/blender-git/blender/source/blender/editors/space_node/node_draw.c:1647)
drawnodespace(const bContext * C, ARegion * ar) (/home/jacques/blender-git/blender/source/blender/editors/space_node/node_draw.c:1777)
node_main_region_draw(const bContext * C, ARegion * ar) (/home/jacques/blender-git/blender/source/blender/editors/space_node/space_node.c:630)
ED_region_do_draw(bContext * C, ARegion * ar) (/home/jacques/blender-git/blender/source/blender/editors/screen/area.c:535)
wm_draw_window_offscreen(bContext * C, wmWindow * win, _Bool stereo) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:632)
wm_draw_window(bContext * C, wmWindow * win) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:768)
wm_draw_update(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:950)
WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:423)
main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:491)
I can reproduce it. ``` BLI_strnlen(const char * s, const size_t maxlen) (/home/jacques/blender-git/blender/source/blender/blenlib/intern/string.c:780) BLI_strncpy(char * restrict dst, const char * restrict src, const size_t maxncpy) (/home/jacques/blender-git/blender/source/blender/blenlib/intern/string.c:108) rna_Node_draw_label(bNodeTree * ntree, bNode * node, char * label, int maxlen) (/home/jacques/blender-git/blender/source/blender/makesrna/intern/rna_nodetree.c:1486) nodeLabel(bNodeTree * ntree, bNode * node, char * label, int maxlen) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/node.c:3484) node_draw_basis(const bContext * C, ARegion * ar, SpaceNode * snode, bNodeTree * ntree, bNode * node, bNodeInstanceKey key) (/home/jacques/blender-git/blender/source/blender/editors/space_node/node_draw.c:1221) node_draw_default(const bContext * C, ARegion * ar, SpaceNode * snode, bNodeTree * ntree, bNode * node, bNodeInstanceKey key) (/home/jacques/blender-git/blender/source/blender/editors/space_node/node_draw.c:1512) node_draw(const bContext * C, ARegion * ar, SpaceNode * snode, bNodeTree * ntree, bNode * node, bNodeInstanceKey key) (/home/jacques/blender-git/blender/source/blender/editors/space_node/node_draw.c:1544) node_draw_nodetree(const bContext * C, ARegion * ar, SpaceNode * snode, bNodeTree * ntree, bNodeInstanceKey parent_key) (/home/jacques/blender-git/blender/source/blender/editors/space_node/node_draw.c:1609) draw_nodetree(const bContext * C, ARegion * ar, bNodeTree * ntree, bNodeInstanceKey parent_key) (/home/jacques/blender-git/blender/source/blender/editors/space_node/node_draw.c:1647) drawnodespace(const bContext * C, ARegion * ar) (/home/jacques/blender-git/blender/source/blender/editors/space_node/node_draw.c:1777) node_main_region_draw(const bContext * C, ARegion * ar) (/home/jacques/blender-git/blender/source/blender/editors/space_node/space_node.c:630) ED_region_do_draw(bContext * C, ARegion * ar) (/home/jacques/blender-git/blender/source/blender/editors/screen/area.c:535) wm_draw_window_offscreen(bContext * C, wmWindow * win, _Bool stereo) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:632) wm_draw_window(bContext * C, wmWindow * win) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:768) wm_draw_update(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:950) WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:423) main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:491) ```
Contributor

Added subscriber: @povmaniac

Added subscriber: @povmaniac
Contributor

Confirmed the partial fix when draw_label method is deleted.

Confirmed the partial fix when `draw_label` method is deleted.

Added subscriber: @AdrianSausenthaler

Added subscriber: @AdrianSausenthaler

Added subscriber: @lemenicier_julien

Added subscriber: @lemenicier_julien

Added subscriber: @BYOB

Added subscriber: @BYOB

Added subscriber: @KuldeepSingh

Added subscriber: @KuldeepSingh

Added subscriber: @bent

Added subscriber: @bent

Added subscriber: @lucacustom

Added subscriber: @lucacustom
Member

Added subscriber: @jdent02

Added subscriber: @jdent02

Added subscriber: @brecht

Added subscriber: @brecht

Caused by 9ecbd67dfb.

Caused by 9ecbd67dfb.

This issue was referenced by 41299bce93

This issue was referenced by 41299bce936afb5e7da9c332d1140c5a77d49317

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-09-17 15:12:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
11 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69808
No description provided.