Fix T69808: crash using custom Node.draw_label

Start happening after 9ecbd67dfb67, but code was already wrong.